@@ -310,11 +310,7 @@ namespace Orthanc
     for (std::list<std::string>::const_iterator
            it = instancesId.begin(); it != instancesId.end(); ++it)
     {
-      std::auto_ptr<Instance> instance(new Instance(index_, *it));
-      if (instance->HasPosition() || instance->HasNormal() || instance->HasIndexInSeries())
-      {
-        instances_.push_back(instance.release());
-      }
+      instances_.push_back(new Instance(index_, *it));
     }
   }
   
@@ -324,6 +320,7 @@ namespace Orthanc
     if (instances_.size() <= 1)
     {
       // One single instance: It is sorted by default
+      sortedInstances_ = instances_;
       return true;
     }
 
@@ -332,25 +329,31 @@ namespace Orthanc
       return false;
     }
 
+    sortedInstances_.clear();
+
+    // consider only the instances with a position
     for (size_t i = 0; i < instances_.size(); i++)
     {
       assert(instances_[i] != NULL);
 
-      if (!instances_[i]->HasPosition() ||
-          (instances_[i]->HasNormal() &&
-           !IsParallelOrOpposite(instances_[i]->GetNormal(), normal_)))
+      if (instances_[i]->HasPosition())
       {
-        return false;
+        sortedInstances_.push_back(instances_[i]);
       }
     }
 
-    PositionComparator comparator(normal_);
-    std::sort(instances_.begin(), instances_.end(), comparator);
-
-    float a = instances_[0]->ComputeRelativePosition(normal_);
-    for (size_t i = 1; i < instances_.size(); i++)
+    if (sortedInstances_.size() == 0)
     {
-      float b = instances_[i]->ComputeRelativePosition(normal_);
+      return false;
+    }
+
+    PositionComparator comparator(normal_);
+    std::sort(sortedInstances_.begin(), sortedInstances_.end(), comparator);
+
+    float a = sortedInstances_[0]->ComputeRelativePosition(normal_);
+    for (size_t i = 1; i < sortedInstances_.size(); i++)
+    {
+      float b = sortedInstances_[i]->ComputeRelativePosition(normal_);
 
       if (std::fabs(b - a) <= 10.0f * std::numeric_limits<float>::epsilon())
       {
@@ -372,27 +375,38 @@ namespace Orthanc
     if (instances_.size() <= 1)
     {
       // One single instance: It is sorted by default
+      sortedInstances_ = instances_;
       return true;
     }
 
+    sortedInstances_.clear();
+
+    // consider only the instances with an index
     for (size_t i = 0; i < instances_.size(); i++)
     {
       assert(instances_[i] != NULL);
-      if (!instances_[i]->HasIndexInSeries())
+      if (instances_[i]->HasIndexInSeries())
       {
-        return false;
+        sortedInstances_.push_back(instances_[i]);
       }
     }
 
-    std::sort(instances_.begin(), instances_.end(), IndexInSeriesComparator);
-    
-    for (size_t i = 1; i < instances_.size(); i++)
+    if (sortedInstances_.size() == 0) // if we were not able to sort instances because none of them had an index, return all instances in a "random" order
     {
-      if (instances_[i - 1]->GetIndexInSeries() == instances_[i]->GetIndexInSeries())
+      sortedInstances_ = instances_;
+    }
+    else
+    {
+      std::sort(sortedInstances_.begin(), sortedInstances_.end(), IndexInSeriesComparator);
+
+      for (size_t i = 1; i < sortedInstances_.size(); i++)
       {
-        // The current "IndexInSeries" occurs 2 times: Not a proper ordering
-        LOG(WARNING) << "This series contains 2 slices with the same index, trying to display it anyway";
-        break;
+        if (sortedInstances_[i - 1]->GetIndexInSeries() == sortedInstances_[i]->GetIndexInSeries())
+        {
+          // The current "IndexInSeries" occurs 2 times: Not a proper ordering
+          LOG(WARNING) << "This series contains 2 slices with the same index, trying to display it anyway";
+          break;
+        }
       }
     }
 
@@ -431,28 +445,28 @@ namespace Orthanc
   }
 
 
-  const std::string& SliceOrdering::GetInstanceId(size_t index) const
+  const std::string& SliceOrdering::GetSortedInstanceId(size_t index) const
   {
-    if (index >= instances_.size())
+    if (index >= sortedInstances_.size())
     {
       throw OrthancException(ErrorCode_ParameterOutOfRange);
     }
     else
     {
-      return instances_[index]->GetIdentifier();
+      return sortedInstances_[index]->GetIdentifier();
     }
   }
 
 
-  unsigned int SliceOrdering::GetFramesCount(size_t index) const
+  unsigned int SliceOrdering::GetSortedInstanceFramesCount(size_t index) const
   {
-    if (index >= instances_.size())
+    if (index >= sortedInstances_.size())
     {
       throw OrthancException(ErrorCode_ParameterOutOfRange);
     }
     else
     {
-      return instances_[index]->GetFramesCount();
+      return sortedInstances_[index]->GetFramesCount();
     }
   }
 
@@ -463,9 +477,9 @@ namespace Orthanc
     result["Type"] = (isVolume_ ? "Volume" : "Sequence");
     
     Json::Value tmp = Json::arrayValue;
-    for (size_t i = 0; i < GetInstancesCount(); i++)
+    for (size_t i = 0; i < GetSortedInstancesCount(); i++)
     {
-      tmp.append(GetBasePath(ResourceType_Instance, GetInstanceId(i)) + "/file");
+      tmp.append(GetBasePath(ResourceType_Instance, GetSortedInstanceId(i)) + "/file");
     }
 
     result["Dicom"] = tmp;
@@ -473,18 +487,18 @@ namespace Orthanc
     Json::Value slicesShort = Json::arrayValue;
 
     tmp.clear();
-    for (size_t i = 0; i < GetInstancesCount(); i++)
+    for (size_t i = 0; i < GetSortedInstancesCount(); i++)
     {
-      std::string base = GetBasePath(ResourceType_Instance, GetInstanceId(i));
-      for (size_t j = 0; j < GetFramesCount(i); j++)
+      std::string base = GetBasePath(ResourceType_Instance, GetSortedInstanceId(i));
+      for (size_t j = 0; j < GetSortedInstanceFramesCount(i); j++)
       {
         tmp.append(base + "/frames/" + boost::lexical_cast<std::string>(j));
       }
 
       Json::Value tmp2 = Json::arrayValue;
-      tmp2.append(GetInstanceId(i));
+      tmp2.append(GetSortedInstanceId(i));
       tmp2.append(0);
-      tmp2.append(GetFramesCount(i));
+      tmp2.append(GetSortedInstanceFramesCount(i));
       
       slicesShort.append(tmp2);
     }
