@@ -51,7 +51,8 @@ namespace Orthanc
     std::string              seriesId_;
     bool                     hasNormal_;
     Vector                   normal_;
-    std::vector<Instance*>   instances_;
+    std::vector<Instance*>   instances_;        // this vector owns the instances
+    std::vector<Instance*>   sortedInstances_;  // this vectore references the instances of instances_
     bool                     isVolume_;
 
     static bool ComputeNormal(Vector& normal,
@@ -77,14 +78,14 @@ namespace Orthanc
 
     ~SliceOrdering();
 
-    size_t  GetInstancesCount() const
+    size_t  GetSortedInstancesCount() const
     {
-      return instances_.size();
+      return sortedInstances_.size();
     }
 
-    const std::string& GetInstanceId(size_t index) const;
+    const std::string& GetSortedInstanceId(size_t index) const;
 
-    unsigned int GetFramesCount(size_t index) const;
+    unsigned int GetSortedInstanceFramesCount(size_t index) const;
 
     void Format(Json::Value& result) const;
   };
